# trend-radar

./: .gitignore  README.md  devbox.json  main.py  pyproject.toml  renovate.json  requirements.txt  trends.csv
.github/workflows/: generate-img.yml
