[project]
name = "trend-radar"
version = "0.1.0"
description = ""
authors = [
    {name = "Jakob Beckmann",email = "f4z3r-github@pm.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "wordcloud==1.9.4",
  "pandas==2.3.2",
  "contourpy==1.3.3",
  "cycler==0.12.1",
  "fonttools==4.59.2",
  "kiwisolver==1.4.9",
  "numpy==2.3.3",
  "packaging==25.0",
  "pillow==11.3.0",
  "pyparsing==3.2.3",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "six==1.17.0",
  "tzdata==2025.2",
  "lxml>=6.0.0",
]
